Tidy up, add search facets, replace resource with asset
